deployment/suppliers/k8s-suppliers-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suppliers-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suppliers-db
  template:
    metadata:
      labels:
        app: suppliers-db
    spec:
      containers:
      - name: suppliers-db
        image: postgres:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -d
            - $(POSTGRES_DB)
            - -U
            - $(POSTGRES_USER)
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: suppliers-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: suppliers-data
        persistentVolumeClaim:
          claimName: suppliers-pvc
---
# suppliers Broker Consumer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suppliers-broker-consumer
  labels:
    app: suppliers-broker-consumer
spec:
  replicas: 0
  selector:
    matchLabels:
      app: suppliers-broker-consumer
  template:
    metadata:
      labels:
        app: suppliers-broker-consumer
    spec:
      containers:
      - name: suppliers-broker-consumer
        image: us-central1-docker.pkg.dev/ccp-perspicapps/ccp-images/suppliers:latest
        command: ["python", "-u", "start_broker_consumer.py"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
# suppliers API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suppliers-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suppliers-api
  template:
    metadata:
      labels:
        app: suppliers-api
    spec:
      containers:
      - name: suppliers-api
        image: us-central1-docker.pkg.dev/ccp-perspicapps/ccp-images/suppliers:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8001
        volumeMounts:
        - name: gcp-key-volume
          mountPath: /etc/gcp
          readOnly: true
      volumes:
      - name: gcp-key-volume
        secret:
          secretName: gcp-bucket-sa-key
          items:
          - key: service-account-key.json
            path: service-account-key.json
        livenessProbe:
          httpGet:
            path: /suppliers/health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 2
