deployment/suppliers/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: suppliers-db
spec:
  selector:
    app: suppliers-db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: suppliers-api
  annotations:
    cloud.google.com/backend-config: '{"default": "suppliers-back-config"}'
spec:
  selector:
    app: suppliers-api
  ports:
  - port: 8001
    targetPort: 8001
